force-app/main/default/objects/Service_Charge__c/Service_Charge__c.object-meta.xml
<CustomObject>
    <description>Junction Object for keeping the pricing details of service and product.
Salesforce Case Study for N26</description>
    <label>Service Charge</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>