force-app/main/default/objects/Service_Charge__c/fields/Has_Percent_Cost__c.field-meta.xml
<CustomField>
    <fullName>Has_Percent_Cost__c</fullName>
    <formula>Percent_Cost__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Percent Cost</label>
    <type>Checkbox</type>
</CustomField>