force-app/main/default/objects/Service_Charge__c/fields/Is_Free_of_Cost__c.field-meta.xml
<CustomField>
    <fullName>Is_Free_of_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Free of Cost</label>
    <type>Checkbox</type>
</CustomField>