force-app/main/default/objects/Service_Charge__c/fields/Percent_Cost__c.field-meta.xml
<CustomField>
    <fullName>Percent_Cost__c</fullName>
    <description>Cost in percentage as compared to other countries.</description>
    <label>Percent Cost</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>