force-app/main/default/objects/Service_Charge__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Service Charges</relationshipLabel>
    <relationshipName>Service_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>