force-app/main/default/objects/Service_Charge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Product__c</columns>
    <columns>Cost__c</columns>
    <columns>Percent_Cost__c</columns>
    <columns>Is_Free_of_Cost__c</columns>
    <columns>Country__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>